// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`happy path 1`] = `
Array [
  Array [
    "get-abook-vcard-by-email/v0",
    Object {
      "email": "login@example.com",
    },
  ],
]
`;

exports[`happy path 2`] = `
Object {
  "id": 1,
  "list_id": 2,
  "vcard": Object {
    "description": "",
    "emails": Array [],
    "events": Array [
      Object {
        "as": "is",
      },
    ],
    "instant_messengers": Array [],
    "names": Array [
      Object {
        "first": "John",
      },
    ],
    "notes": Array [
      "notes",
    ],
    "organizations": Array [],
    "social_profiles": Array [],
    "telephone_numbers": Array [],
  },
}
`;

exports[`happy path for external login 1`] = `
Array [
  Array [
    "staff-affiliation",
  ],
  Array [
    "get-abook-vcard-by-email/v0",
    Object {
      "email": "login@example.com",
    },
  ],
]
`;

exports[`happy path for external login 2`] = `
Object {
  "id": 1,
  "list_id": 2,
  "vcard": Object {
    "names": Array [
      Object {
        "first": "John",
      },
    ],
    "organizations": Array [],
  },
}
`;

exports[`happy path for internal login 1`] = `
Array [
  Array [
    "staff-affiliation",
  ],
  Array [
    "get-abook-vcard-by-email/v0",
    Object {
      "email": "login@example.com",
    },
  ],
]
`;

exports[`happy path for internal login 2`] = `
Object {
  "id": 1,
  "list_id": 2,
  "vcard": Object {
    "description": "",
    "emails": Array [],
    "events": Array [
      Object {
        "as": "is",
      },
    ],
    "instant_messengers": Array [],
    "names": Array [
      Object {
        "first": "John",
      },
    ],
    "notes": Array [
      "notes",
    ],
    "organizations": Array [],
    "social_profiles": Array [],
    "telephone_numbers": Array [],
  },
}
`;

exports[`happy path for pdd 1`] = `
Array [
  Array [
    "get-abook-vcard-by-email/v0",
    Object {
      "email": "login@example.com",
    },
  ],
]
`;

exports[`happy path for pdd 2`] = `
Object {
  "id": 1,
  "list_id": 2,
  "vcard": Object {
    "emails": Array [],
    "names": Array [
      Object {
        "first": "John",
      },
    ],
    "organizations": Array [],
  },
}
`;

exports[`фильтрация для шареных контактов 1`] = `
Array [
  Array [
    "get-abook-vcard-by-email/v0",
    Object {
      "email": "login@example.com",
    },
  ],
]
`;

exports[`фильтрация для шареных контактов 2`] = `
Object {
  "id": 1,
  "list_id": 2,
  "vcard": Object {
    "emails": Array [
      Object {
        "email": "login@example.com",
      },
    ],
    "names": Array [
      Object {
        "first": "John",
      },
    ],
    "organizations": Array [],
  },
}
`;
